--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,6 +19,10 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: gradle
+    - name: Putting data
+      env:
+        DATA: ${{ secrets.GOOGLE_SERVICES }}
+      run: echo $DATA > /home/runner/work/lexi-app/app/google-services.json
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
