--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,11 +9,12 @@ plugins {
 android {
     namespace 'com.example.lexiapp'
     compileSdk 33
-    compileSdkPreview 'UpsideDownCake'
+    compileSdkPreview "UpsideDownCake"
 
     defaultConfig {
         applicationId "com.example.lexiapp"
-        minSdk 24
+        targetSdkPreview "UpsideDownCake"
+        minSdk 26
         targetSdk 33
         versionCode 1
         versionName "1.0"
