--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -16,8 +16,9 @@ jobs:
       - name: Setup JDK 11
         uses: actions/setup-java@v3
         with:
-          distribution: temurin
-          java-version: "11"
+          java-version: '11'
+          distribution: 'temurin'
+          cache: gradle
       - name: Create file
         run: cat /home/runner/work/lexi-app/lexi-app/app/google-services.json | base64
       - name: Putting data
