--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -19,12 +19,19 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
           cache: gradle
-      - name: Create file
+      - name: Create file google_services.json
         run: cat /home/runner/work/lexi-app/lexi-app/app/google-services.json | base64
-      - name: Putting data
+      - name: Putting data in google_services.json
         env:
           DATA: ${{ secrets.GOOGLE_SERVICES }}
         run: echo $DATA | base64 -d > /home/runner/work/lexi-app/lexi-app/app/google-services.json
+      - name: Create file Secrets.kt
+        run: touch ./app/src/main/java/com/example/lexiapp/domain/model/Secrets.kt
+      - name: Putting data in Secrets.kt
+        env:
+          DATA: ${{ secrets.SECRETS_KT }}
+        run: echo $DATA | base64 -d > ./app/src/main/java/com/example/lexiapp/domain/model/Secrets.kt
+
       - name: Set execution flag for gradlew
         run: chmod +x gradlew
       - name: Build APK
